# zig-protobuf

./: .gitignore  LICENSE  README.md  build.zig  build.zig.zon
.github/workflows/: cmake.yml  zig-protobuf.yml
conformance/: build.zig
conformance/output/: README.md  err.txt
conformance/src/: generated  main.zig
protoc-zig/: CMakeLists.txt
protoc-zig/inc/: codeGenerator.hpp  formatter.hpp  protobuf.zig.hpp
protoc-zig/src/: codeGenerator.cpp  formatter.cpp  main.cpp
src/: main.zig  protobuf.zig
test-protos/: conformance.proto  message.proto  simple.proto  test.proto
tools/: clean_env.py  generate_encoded.py  generate_zig_protobuf.py  prepare_env.py
